--- a/orca/index.html
+++ b/orca/index.html
@@ -1,1 +1,86 @@
-<p>Orca page</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Discover Orca Livecoding: a powerful tool for creative programming and real-time performances on Guillaume Cournet's personal site.">
+  <meta name="keywords" content="Orca Livecoding, creative programming, real-time performances, Guillaume Cournet, hrst4.xyz">
+  <title>Orca Livecoding - Guillaume Cournet | hrst4.xyz</title>
+  <link rel="stylesheet" href="styles.css"> <!-- Ensure to create this CSS file for styling -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+</head>
+<body>
+  <header>
+    <div class="container">
+      <h1>Orca Livecoding</h1>
+      <p>A creative programming companion for real-time performances on Guillaume Cournet's site</p>
+    </div>
+  </header>
+
+  <main>
+    <section id="introduction">
+      <div class="container">
+        <h2>Introduction</h2>
+        <p>Orca is a livecoding environment designed to enable creative performances in real-time. With a focus on simplicity and flexibility, Orca allows you to experiment with code and create engaging experiences.</p>
+        <img src="images/orca_screenshot.png" alt="Orca Livecoding Screenshot" class="responsive-img">
+      </div>
+    </section>
+
+    <section id="features">
+      <div class="container">
+        <h2>Features</h2>
+        <ul>
+          <li>Real-time coding and performances</li>
+          <li>Flexible and expressive coding environment</li>
+          <li>Supports various creative programming techniques</li>
+          <li>Customizable for different types of performances</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="getting-started">
+      <div class="container">
+        <h2>Getting Started</h2>
+        <p>To start using Orca, follow these simple steps:</p>
+        <ol>
+          <li>Download Orca from the official site.</li>
+          <li>Set up your environment according to the provided instructions.</li>
+          <li>Explore the documentation and examples to learn how to use Orca effectively.</li>
+        </ol>
+        <a href="https://example.com/getting-started" class="btn">Learn More</a>
+      </div>
+    </section>
+
+    <section id="examples">
+      <div class="container">
+        <h2>Examples</h2>
+        <p>Check out some examples of what you can create with Orca:</p>
+        <ul>
+          <li><a href="https://example.com/example1" target="_blank">Example 1</a></li>
+          <li><a href="https://example.com/example2" target="_blank">Example 2</a></li>
+          <li><a href="https://example.com/example3" target="_blank">Example 3</a></li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="container">
+        <h2>Contact</h2>
+        <p>If you have any questions or need assistance, feel free to reach out:</p>
+        <ul>
+          <li>Email: <a href="mailto:cournet.guillaume@protonmail.com">cournet.guillaume@protonmail.com</a></li>
+          <li>Twitter: <a href="https://twitter.com/guillaumecournet" target="_blank">@guillaumecournet</a></li>
+        </ul>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2024 Guillaume Cournet. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <script src="scripts.js"></script> <!-- Ensure to create this JavaScript file for interactions -->
+</body>
+</html>
