--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
 
     </header>
 
+    <footer>
+        <div class="container">
+          <p>&copy; Guillaume Cournet. All rights reserved.</p>
+        </div>
+    </footer>
+
     
 
     <script src="./scripts/addMenu.js"></script>
