--- a/memoire/index.html
+++ b/memoire/index.html
@@ -7174,6 +7174,12 @@ Studios : Katastro. Fi.
   </div>
 </section>
 
+<footer>
+  <div class="container">
+    <p>&copy; Guillaume Cournet. All rights reserved.</p>
+  </div>
+</footer>
+
 <script>
   document.addEventListener("DOMContentLoaded", function() {
       const tocContent = document.getElementById('toc-content');
