--- a/contact/index.html
+++ b/contact/index.html
@@ -112,6 +112,12 @@
 				</div>
 			</div>
 		</section>
+
+		<footer>
+			<div class="container">
+			  <p>&copy; Guillaume Cournet. All rights reserved.</p>
+			</div>
+		</footer>
 		
 
 	<script src="js/jquery.min.js"></script>
