--- a/orca/index.html
+++ b/orca/index.html
@@ -77,7 +77,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2024 Guillaume Cournet. All rights reserved.</p>
+      <p>&copy; Guillaume Cournet. All rights reserved.</p>
     </div>
   </footer>
 
