--- a/memoire/index.html
+++ b/memoire/index.html
@@ -19,6 +19,14 @@
 
   <title>Guillaume Cournet Mémoire ATI | hrst4.xyz</title>
   <style>
+
+    footer {
+      background: #333;
+      color: #fff;
+      text-align: center;
+      padding: 1rem;
+    }
+
     .centered {
         text-align: center;
     }
@@ -7199,26 +7207,5 @@ Studios : Katastro. Fi.
 
   
 </script>
-
-<!--
-  <script>
-    document.addEventListener("DOMContentLoaded", function() {
-      const tocContent = document.getElementById('toc-content');
-      const headers = document.querySelectorAll('h1, h2, h3');
-      headers.forEach((header, index) => {
-        const id = `header-${index}`;
-          header.id = id;
-          const link = document.createElement('a');
-          link.href = `#${id}`;
-          link.textContent = header.textContent;
-          link.classList.add(`toc-${header.tagName.toLowerCase()}`);
-          tocContent.appendChild(link);
-          });
-          
-          // Assurez-vous que la case est décochée au chargement de la page
-          document.getElementById('toc-toggle').checked = false;
-          });
-  </script>
--->
 </body>
 </html>
