--- a/contact/index.html
+++ b/contact/index.html
@@ -113,13 +113,11 @@
 			</div>
 		</section>
 
-		<footer>
-			<div class="container">
-			  <p>&copy; Guillaume Cournet. All rights reserved.</p>
-			</div>
+		<footer id="footer" class="footer">
+        
 		</footer>
-		
-
+	  
+	<script src="../scripts/addFooter.js"></script>
 	<script src="js/jquery.min.js"></script>
   <script src="js/popper.js"></script>
   <script src="js/bootstrap.min.js"></script>
