--- a/memoire/index.html
+++ b/memoire/index.html
@@ -7182,12 +7182,6 @@ Studios : Katastro. Fi.
   </div>
 </section>
 
-<footer>
-  <div class="container">
-    <p>&copy; Guillaume Cournet. All rights reserved.</p>
-  </div>
-</footer>
-
 <script>
   document.addEventListener("DOMContentLoaded", function() {
       const tocContent = document.getElementById('toc-content');
@@ -7207,5 +7201,12 @@ Studios : Katastro. Fi.
 
   
 </script>
+
+<footer id="footer" class="footer">
+        
+</footer>
+
+<script src="../scripts/addFooter.js"></script>
+
 </body>
 </html>
