--- a/orca/index.html
+++ b/orca/index.html
@@ -75,12 +75,11 @@
     </section>
   </main>
 
-  <footer>
-    <div class="container">
-      <p>&copy; Guillaume Cournet. All rights reserved.</p>
-    </div>
+  <footer id="footer" class="footer">
+        
   </footer>
 
+  <script src="../scripts/addFooter.js"></script>
   <script src="scripts.js"></script> <!-- Ensure to create this JavaScript file for interactions -->
 </body>
 </html>
