--- a/index.html
+++ b/index.html
@@ -41,15 +41,14 @@
 
     </header>
 
-    <footer>
-        <div class="container">
-          <p>&copy; Guillaume Cournet. All rights reserved.</p>
-        </div>
+    <footer id="footer" class="footer">
+        
     </footer>
 
     
 
     <script src="./scripts/addMenu.js"></script>
+    <script src="./scripts/addFooter.js"></script>
 
 </body>
 </html>
